[gd_scene load_steps=15 format=2]

[ext_resource path="res://Entities/Enemies/MinigunMachine/MinigunMachine.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/MinigunMachine/MiniMachine.png" type="Texture" id=2]
[ext_resource path="res://Entities/Enemies/MinigunMachine/Minigun.png" type="Texture" id=3]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Managing/Colliders/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Enemies/MinigunMachine/Minigun.gd" type="Script" id=7]
[ext_resource path="res://Entities/Enemies/Assets/EnemyOutline.tres" type="Material" id=8]

[sub_resource type="Animation" id=1]
resource_name = "cooldown"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 8.57423, 1 ),
"update": 0,
"values": [ Color( 1, 0.721569, 0.721569, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 4.12311

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 112.0

[sub_resource type="CircleShape2D" id=5]
radius = 11.0

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite/Minigun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 13 ), Vector2( 0, 11 ), Vector2( 0, 12 ), Vector2( 0, 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="MinigunMachine" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )
kbAmount = 32.0
health = 55.0

[node name="ScaleHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
material = ExtResource( 8 )
texture = ExtResource( 2 )
offset = Vector2( 0, -0.5 )
hframes = 4

[node name="Minigun" type="Node2D" parent="ScaleHelper/Sprite"]
position = Vector2( 0, 13 )
script = ExtResource( 7 )
startCooldown = 0.2
minCooldown = 0.2
overheatShotCount = 3
damage = 1

[node name="Sprite" type="Sprite" parent="ScaleHelper/Sprite/Minigun"]
material = ExtResource( 8 )
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )
flip_v = true
hframes = 4

[node name="Cooldown" type="Timer" parent="ScaleHelper/Sprite/Minigun"]
one_shot = true

[node name="OverheatCooldown" type="Timer" parent="ScaleHelper/Sprite/Minigun"]
wait_time = 3.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScaleHelper/Sprite/Minigun"]
anims/cooldown = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Collisions" type="Node2D" parent="."]
visible = false

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 4 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 6 )]
mustBeInSight = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 4 )

[node name="SoftCollision" parent="Collisions" instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Collisions/SoftCollision" index="0"]
shape = SubResource( 5 )

[node name="BounceRay" type="RayCast2D" parent="Collisions"]
enabled = true

[node name="Timers" type="Node" parent="."]

[node name="WanderTimer" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 6 )

[connection signal="hurt" from="Collisions/Hurtbox" to="." method="_on_hurt"]
[connection signal="timeout" from="Timers/WanderTimer" to="." method="_on_wander_timer_timeout"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/PlayerDetection"]
[editable path="Collisions/SoftCollision"]
